--- a/gravadorSerial/Site/index.html
+++ b/gravadorSerial/Site/index.html
@@ -74,7 +74,7 @@
             Instale o Gravador Serial aqui!
         </Header>
         <div class="download">
-            <a href="../dist/main.exe" download class="botaoDownload">
+            <a href="../build/exe.win-amd64-3.12/main.exe" download class="botaoDownload">
                 Download Gravador Serial 
             </a>
 
